Java の表現力に関するレビュー指摘を反映する
深夜帯を record から enum にした。法が認める値は 2 つしかないのに
record + 実行時検証にしていたため、型の上では任意の時刻を渡せた。
取りうる値が固定なら列挙にして、不正な値をそもそも書けなくする。

割増率を小数第 3 位に正規化した。record の equals は BigDecimal.equals を
使い、値だけでなくスケールも比較する。DB の NUMERIC(4,3) は 0.250 を
返すため、正規化しないと定数 0.25 と等しくならず、読み書きを往復した
だけで別の値になっていた。

DateRange の番兵を明示した。LocalDate.MAX は PostgreSQL の date が
表せる上限を超えるので、そのままでは永続化できない。番兵を定数にして
infrastructure が NULL に写す責務を javadoc に書き、端が番兵のときの
days() は例外にした。365241759927 日という値を黙って返させない。

例外を 2 つに分けた。退勤し忘れ（並びは正しいが途中）と、二重の出勤
（並びが状態機械に反する）は利用者への案内が違う。1 つにまとめると
画面が「退勤を打ってください」と「訂正申請へ」を出し分けられない。
あわせて業務エラーの基底 DomainException を置き、errorCode() で
Problem Details の type を返せるようにした。

EffectiveWorkRule の findFirst をやめた。期間の重なりは EXCLUDE 制約で
禁じているので 2 件見つかるのは制約が壊れた証拠であり、先頭を黙って
採ると、どちらが使われたかが実行のたびに変わりうるのに誰も気づけない。

NightWorkRule の深夜判定を区間の一致から開始時刻の包含に変えた。
深夜帯の端点で切ったあとに他の規則がさらに細かく切ると、一致では
断片を取りこぼす。

flexibleMorning/Evening を Optional にした。コアタイムが外枠の先頭から
始まる規則は矛盾ではなく正当な設定なので、例外にしない。

Clock の Bean と BusinessZone を実装した。application.yaml に
kintai.business-zone を書きながら読む側が無かった。ゾーンは設定値に
しない。あとから変えると過去の打刻の解釈まで遡って変わる。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015d3PU7mBG9c8MgPaMkHzr2